corrected remaining layout issues in Safari

--- a/css/styles.css
+++ b/css/styles.css
@@ -228,12 +228,13 @@ button.date.black.selected {
 .travel-modal-container,
 .event-modal-container {
   position: fixed;
-  bottom: 0;
+  top: 0;
   width: 100%;
   height: 100vh;
   margin: 0;
   background-color: rgba(41, 41, 41, 0.75);
   z-index: 2;
+  align-items: center;
 }
 
 .travel-modal-form,
@@ -312,8 +313,8 @@ button.date.black.selected {
   border: none;
   border-bottom: 1px solid black;
   font-size: 18px;
-  margin: 0 1rem;
-  width: 100%;
+  margin: 0 0.5rem;
+  width: 70%;
   height: 30px;
 }
 
@@ -367,7 +368,7 @@ button.meeting {
   color: #7c7c7c;
   font-size: 18px;
   font-weight: 600;
-  margin: 0 1rem;
+  margin: 0 0.5rem;
   width: 100%;
   height: 30px;
 }
@@ -380,10 +381,12 @@ button.meeting {
   border-radius: 5px;
   border: none;
   margin: 0 0.25rem;
+  padding: 0.25rem;
 }
 
 button.event-modal-time {
   border: 3px solid white;
+  padding: 0.25rem 0.5rem;
 }
 
 button.event-modal-time:hover {
@@ -545,6 +548,7 @@ button.event-modal-time.modal-selected {
   height: 25px;
   width: 25px;
   margin: 1rem;
+  padding: 0;
 }
 
 .add-event {
